# streaming-kafka-spark

./: .gitignore  customer.json  docker-compose.yml  pyproject.toml  readme.md
dados/: customer.db  customer.json  dataset1.txt  dataset2.csv
dados/partition1/State=AL/: .part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv.crc  part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv
dados/partition1/State=PR/: .part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv.crc  part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv
dados/partition1/State=RJ/: .part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv.crc  part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv
dados/partition1/State=RN/: .part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv.crc  part-00000-4452daa8-27e1-4a82-b5b5-a8aacd50f705.c000.csv
dados/repartition/: .part-00000.crc
jobs/: add_month.py  add_new_col.py  aggregate_stats.py  arrays.py  collect.py  column_operations.py  columns_to_map.py  dedup.py  df_repartition.py  dictionary.py  drop_column.py  explode.py  expr.py  filter.py  load_json.py  log_level.py  loop.py  map_to_columns.py  mappartitions.py  maptype-dataframe-column.py  operators.py  parallelize.py  partitionby.py  pivot.py  range_partition.py  rdd.py  repartition.py  row.py  sampling.py  split.py  time.py  top_rows.py  udf.py  window_functions.py  withcolumn.py
jobs/rdd/: rdd-flatMap.py  rdd.py  rdd_actions.py  rdd_broadcast.py  rdd_dataframe.py  rdd_map.py  rdd_reduce.py  rdd_reduce2.py  rdd_reduceByKey.py
prepare_json/: Cria_database.py  generate_json.py
(+60 files in other folders)
