[tool.poetry]
name = "streaming-kafka-spark"
version = "0.1.0"
description = "Project to streaming processing with Kafka and Pyspark"
authors = ["Silmara-Basso <silmarabasso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
